# ai-notes-exercises

./: .gitignore  LICENSE  README.md
java-codes/sample/: pom.xml
java-codes/sample/src/main/java/com/example/sample/: SampleApplication.java
java-codes/sample/src/main/java/com/example/sample/controller/: UserController.java
java-codes/sample/src/main/java/com/example/sample/entity/: User.java
java-codes/sample/src/main/java/com/example/sample/repository/: UserRepository.java
java-codes/sample/src/main/java/com/example/sample/service/: UserService.java
java-codes/sample/src/main/resources/: application.properties
n8n-workflow/: Social_media_post_automation.json
notes/: keyFiles.md  setup.md  spring-boot.md
notes/java/: java-notes.md
notes/postgreSQL/: databaseHakkinda.md
notes/python/notes/: proje nasıl oluşturulur.md
notes/visualCode-notes/settings-notes/: setting-note.md
python-codes/modern-user-api/: docker-compose.yml  pyproject.toml
python-codes/modern-user-api/app/: database.py  main.py
python-codes/modern-user-api/app/api/: dependencies.py
python-codes/modern-user-api/app/api/v1/: auth.py  users.py
python-codes/modern-user-api/app/core/: config.py  security.py
python-codes/modern-user-api/app/models/: user.py
python-codes/modern-user-api/app/schemas/: user.py
python-codes/modern-user-api/app/services/: user.py
python-codes/python-user-api/app/: crud.py  database.py  main.py  models.py  schemas.py
